# Some_pseudogen_code

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SimulationController.cpp  SimulationController.h  TestMap.txt  TodoList.txt  main.cpp  map.cpp  map.h  mapObject.cpp  mapObject.h  robot.cpp  robot.h
Google_tests/: CMakeLists.txt
Google_tests/MapTests/: MapCreateTest.cpp
Map/: CMakeLists.txt  Empty.cpp  Empty.h  Food.cpp  Food.h  Wall.cpp  Wall.h  map.cpp  map.h  mapObject.cpp  mapObject.h  robot.cpp  robot.h
